tests/type/errors/var_type_mismatch.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() {
	var x: int = true;
}

scene main
{
}
